--- a/SparkValueDesktopApplication/Views/DashboardView.xaml
+++ b/SparkValueDesktopApplication/Views/DashboardView.xaml
@@ -67,11 +67,15 @@
                                 <Border Width="550" Margin="1.5" Style="{DynamicResource BackgroundColorBorder}" CornerRadius="5">
                                     <Expander HorizontalAlignment="Right" FlowDirection="RightToLeft" Margin="5">
                                         <Expander.Header>
-                                            <TextBlock Width="520" HorizontalAlignment="Left" Text="{Binding Title}">
-                                                <TextBlock.ToolTip>
-                                                    <ToolTip FlowDirection="LeftToRight" Content="{Binding Description}"/>
-                                                </TextBlock.ToolTip>
-                                            </TextBlock>
+                                            <StackPanel VerticalAlignment="Center">
+                                                <TextBlock Width="520" HorizontalAlignment="Left" Text="{Binding Title}">
+                                                    <TextBlock.ToolTip>
+                                                        <ToolTip FlowDirection="LeftToRight" Content="{Binding Description}"/>
+                                                    </TextBlock.ToolTip>
+                                                </TextBlock>
+                                                <ProgressBar FlowDirection="LeftToRight" Height="8" Width="190" HorizontalAlignment="Left" Foreground="Goldenrod"
+                                                             Minimum="0" Maximum="{Binding ProgressGoal}" Value="{Binding CurrentProgress}"/>
+                                            </StackPanel>
                                         </Expander.Header>
                                         <ItemsControl ItemsSource="{Binding Lessons}">
                                             <ItemsControl.ItemsPanel>
